git feat 更新了setting窗口，对应RecWindow公用类，加入了遮罩层相关事件，和右上角角标的简单启用设置。还添加了setting窗口事件，具体配置布局待后续添加